--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 			"wpackagist-plugin/advanced-custom-fields": "^5.8",
 			"wpackagist-theme/twentysixteen": "*",
 			"webdevstudios/wds-required-plugins": "^1.2",
-		"webdevstudios/oops-wp": "^0.2.0"
+		"webdevstudios/oops-wp": "^0.2.0",
+		"pokemon-tcg/pokemon-tcg-sdk-php": "^1.2"
 	},
 	"autoload": {
 			"psr-4": {
