Adding netlify deploy

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
 		"webdevstudios/oops-wp": "^0.2.0",
 		"pokemon-tcg/pokemon-tcg-sdk-php": "^1.2",
 		"wp-graphql/wp-graphql": "^0.3.5",
-		"wp-graphql/wp-graphiql": "^1.0.0"
+		"wp-graphql/wp-graphiql": "^1.0.0",
+		"wpackagist-plugin/webhook-netlify-deploy": "^1.1"
 	},
 	"autoload": {
 		"psr-4": {
