--- a/plugins/trainerdb/package.json
+++ b/plugins/trainerdb/package.json
@@ -1,19 +1,66 @@
 {
-	"name": "trainerdb",
-	"version": "0.1.0",
-	"description": "Track your Pokemon TCG collection",
-	"author": "Evan Hildreth",
-	"license": "GPL-2.0-or-later",
-	"main": "build/index.js",
-	"scripts": {
-		"build": "wp-scripts build",
-		"format:js": "wp-scripts format-js",
-		"lint:css": "wp-scripts lint-style",
-		"lint:js": "wp-scripts lint-js",
-		"start": "wp-scripts start",
-		"packages-update": "wp-scripts packages-update"
-	},
-	"devDependencies": {
-		"@wordpress/scripts": "^7.1.2"
-	}
+  "name": "wds-block-starter",
+  "version": "0.0.1",
+  "description": "WebDevStudios Block Starter",
+  "main": "src/index.js",
+  "scripts": {
+    "start": "wp-scripts start",
+    "build": "wp-scripts build",
+    "lint:css": "wp-scripts lint-style && ./node_modules/.bin/sass-lint --config ./node_modules/@webdevstudios/css-coding-standards/.sass-lint.yml '**/*.scss' --verbose",
+    "lint:js": "wp-scripts lint-js",
+    "lint:php": "./vendor/bin/phpcs --standard=./.phpcs.xml.dist --extensions=php ./ --ignore='./build/*,./node_modules/*,./vendor/*'",
+    "packages-update": "wp-scripts packages-update",
+    "postinstall": "wp-scripts build && composer install"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/WebDevStudios/wds-block-starter"
+  },
+  "keywords": [
+    "Gutenberg"
+  ],
+  "author": "WebDevStudios",
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/WebDevStudios/wds-block-starter/issues"
+  },
+  "homepage": "https://github.com/WebDevStudios/wds-block-starter#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@webdevstudios/css-coding-standards": "^1.0.0",
+    "@webdevstudios/js-coding-standards": "~1.0.2",
+    "@wordpress/scripts": "^7.1.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.4.2",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.10",
+    "ignore-emit-webpack-plugin": "^2.0.2",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-safe-parser": "^4.0.2",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.42.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:@wordpress/eslint-plugin/esnext",
+      "plugin:@wordpress/eslint-plugin/react",
+      "@webdevstudios/js-coding-standards"
+    ]
+  },
+  "sasslintConfig": "./node_modules/@webdevstudios/css-coding-standards/.sass-lint.yml",
+  "stylelint": {
+    "extends": "stylelint-config-wordpress",
+    "ignoreFiles": [
+      "**/*.scss",
+      "build/**/*.css"
+    ]
+  }
 }
